sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Any_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Any_Additional_Notes__c</fullName>
    <label>Any Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>