sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Date__c</fullName>
    <label>Collection Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>