sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collector</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Usage Data</relationshipLabel>
    <relationshipName>Usage_Data</relationshipName>
    <type>Lookup</type>
</CustomField>