sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notes__c</fullName>
    <label>Customer Notes</label>
    <type>TextArea</type>
</CustomField>