sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Days_Since_Last_Collection__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Collection__c</fullName>
    <label>Days Since Last Collection</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>