sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Girls_1pm_5pm__c.field-meta.xml
<CustomField>
    <fullName>Girls_1pm_5pm__c</fullName>
    <label>Girls 1pm-5pm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>