sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Has_Type_of_Customer_Changed__c.field-meta.xml
<CustomField>
    <fullName>Has_Type_of_Customer_Changed__c</fullName>
    <label>Has Type of Customer Changed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>