sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/If_customer_numbers_are_changing_why__c.field-meta.xml
<CustomField>
    <fullName>If_customer_numbers_are_changing_why__c</fullName>
    <label>If customer numbers are changing, why?</label>
    <type>TextArea</type>
</CustomField>