sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/If_yes_who_are_new_customers__c.field-meta.xml
<CustomField>
    <fullName>If_yes_who_are_new_customers__c</fullName>
    <label>If yes, who are new customers?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Neighbors</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
            <value>
                <fullName>Schoolchildren</fullName>
            </value>
            <value>
                <fullName>Commuters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>