sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Majority_of_customers_are__c.field-meta.xml
<CustomField>
    <fullName>Majority_of_customers_are__c</fullName>
    <label>Majority of customers are:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-Time Customers</fullName>
            </value>
            <value>
                <fullName>Repeat Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>