sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Other_Suggested_Marketing_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Other_Suggested_Marketing_Strategies__c</fullName>
    <label>Other Suggested Marketing Strategies</label>
    <type>TextArea</type>
</CustomField>