sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Total_Customers_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Total_Customers_per_Day__c</fullName>
    <formula>(Boys_1pm_5pm__c + Boys_5am_9am__c + Boys_5pm_9pm__c + Boys_9am_1pm__c

+ Men_5am_9am__c + Men_9am_1pm__c + Men_1pm_5pm__c + Men_5pm_9pm__c

+ Women_5am_9am__c + Women_9am_1pm__c + Women_1pm_5pm__c + Women_5pm_9pm__c

+ Girls_5am_9am__c + Girls_9am_1pm__c + Girls_1pm_5pm__c + Girls_5pm_9pm__c

+ Boys_Misc__c + Men_Misc__c + Women_Misc__c + Girls_Misc__c

+ X1pm_5pm_Misc__c + X5am_9am_Misc__c + X5pm_9pm_Misc__c + X9am_1pm_Misc__c) /


 Days_Since_Last_Collection__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Customers per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>