sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Women_5am_9am__c.field-meta.xml
<CustomField>
    <fullName>Women_5am_9am__c</fullName>
    <label>Women 5am-9am</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>