sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Women_5pm_9pm__c.field-meta.xml
<CustomField>
    <fullName>Women_5pm_9pm__c</fullName>
    <label>Women 5pm-9pm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>