sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Women_9am_1pm__c.field-meta.xml
<CustomField>
    <fullName>Women_9am_1pm__c</fullName>
    <label>Women 9am-1pm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>