sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/Women_Misc__c.field-meta.xml
<CustomField>
    <fullName>Women_Misc__c</fullName>
    <label>Women Misc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>