sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/X1pm_5pm_Misc__c.field-meta.xml
<CustomField>
    <fullName>X1pm_5pm_Misc__c</fullName>
    <label>1pm-5pm Misc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>