sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/X5am_9am_Misc__c.field-meta.xml
<CustomField>
    <fullName>X5am_9am_Misc__c</fullName>
    <label>5am-9am Misc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>