sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/X5pm_9pm_Misc__c.field-meta.xml
<CustomField>
    <fullName>X5pm_9pm_Misc__c</fullName>
    <label>5pm-9pm Misc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>