sfSandBoxCode/force-app/main/default/objects/Usage_Data__c/fields/X9am_1pm_Misc__c.field-meta.xml
<CustomField>
    <fullName>X9am_1pm_Misc__c</fullName>
    <label>9am-1pm Misc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>